Bug 146553 - Can't insert AutoText into "Editable in read-only document" section
Summary: Can't insert AutoText into "Editable in read-only document" section
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Oliver Specht (CIB)
URL:
Whiteboard: target:25.2.0 target:25.8.0
Keywords:
Depends on:
Blocks: AutoText
  Show dependency treegraph
 
Reported: 2022-01-03 16:20 UTC by Gabor Kelemen (Collabora)
Modified: 2025-02-21 21:27 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the example document in current master with the AutoText dialog open (168.05 KB, image/png)
2022-01-03 16:20 UTC, Gabor Kelemen (Collabora)
Details
dropdown toolbar should be enabled in readonly section (6.90 KB, image/png)
2025-02-04 06:17 UTC, Oliver Brinzing
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2022-01-03 16:20:14 UTC
Created attachment 177291 [details]
Screenshot of the example document in current master with the AutoText dialog open

This is another issue from the example file of bug 146547
Autotext can not be inserted into an "Editable in read-only document" section of a read-only document.

1, Download attachment 177284 [details]
2, Make sure to have Read-only set on it on the file system level.
3, Open the attached document, the "This document is open in read-only mode" infobar should appear.
4, Position the cursor in the yellow sections
5, Choose Tools - AutoText and select one preset autotext in the dialog.

The Insert button remains greyed out, so you can not insert an autotext into an otherwise editable section.

Expected:
The Insert button should be active in the AutoText dialog if the cursor is inside a section with the "Editable in read-only document" setting.


Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: c13db6e792cc347ffff4585f23866f195651f21f
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded
Comment 1 Aron Budea 2022-01-14 22:09:33 UTC
Confirmed using LO Version: 7.4.0.0.alpha0+ (bf883027ee62ece0844730572305094f53daa521) / Ubuntu.
Comment 2 QA Administrators 2024-01-15 03:11:57 UTC Comment hidden (obsolete)
Comment 3 Commit Notification 2024-11-29 00:16:53 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/40436e1dfdad42690cc0cfc4781c38e5419e0dc5

tdf#146553 Enable additonal functions in editable section while in r/o mode

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Buovjaga 2024-12-06 18:30:57 UTC
Can this be closed as fixed?
Comment 5 Gabor Kelemen (Collabora) 2024-12-16 15:38:38 UTC
Half done:
- typing a shortcut like "lorem" and pressing F3 works, content is inserted
- showing the Autotext dialog, selecting one preset and pressing Insert button does not work - now the dialog is visible, but Insert is still disabled.
Comment 6 Commit Notification 2025-02-01 13:55:32 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/88741ef8c7aaa6d75ff99e44648087ff743937f1

tdf#146553 sw: Enable the AutoText dialog's Insert button in editable

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Gabor Kelemen (Collabora) 2025-02-03 15:51:34 UTC
Checked in

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 08e40accb3fabe676746c40797efc20eaa218801
CPU threads: 14; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded

Now even the Insert button works in the AutoText dialog.
Comment 8 Oliver Brinzing 2025-02-04 06:16:02 UTC
just noticed:

klicking on toolbar button will open dialog - but dropdown is not working in a readonly section
Comment 9 Oliver Brinzing 2025-02-04 06:17:55 UTC
Created attachment 198956 [details]
dropdown toolbar should be enabled in readonly section
Comment 10 Commit Notification 2025-02-21 21:27:33 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/652259c47d2be3f1b122ae4aee9e0b09f3f6cc5c

tdf#146553 sw: allow the AutoText dropdown button in the toolbar in RO

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.