sw/source/uibase/uiview/view0.cxx
@@ -210,7 +210,8 @@ void SwView::StateViewOptions(SfxItemSet &rSet)
     while(nWhich)
     {
         bool bReadonly = GetDocShell()->IsReadOnly();
-        if (bReadonly && nWhich != FN_VIEW_GRAPHIC && nWhich != FN_HIGHLIGHT_CHAR_DF)
+        if (bReadonly && nWhich != FN_VIEW_GRAPHIC && nWhich != FN_HIGHLIGHT_CHAR_DF
+            && nWhich != SID_AUTOSPELL_CHECK)
         {
             rSet.DisableItem(nWhich);
             nWhich = 0;
